welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:23: error: too many arguments for method faireV: ()Unit
faireV(4);
      ^